--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DeletePersonalDataModel
 @{
-    ViewData["Title"] = "Delete Personal Data";
+    ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String38");
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
     Layout = "~/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml";
 }
@@ -9,7 +9,7 @@
 <div class="texto-info">@ViewData["Title"]</div>
 
 <div class="perfil-alerta" role="alert">
-    <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+    <strong>@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String39")</strong>
 </div>
 
 <div>
@@ -18,13 +18,13 @@
         @if (Model.RequirePassword)
         {
             <div class="mb-3">
-                <label asp-for="Input.Password" class="texto-info-entrada"></label>
-                <input asp-for="Input.Password" class="entrada-texto" autocomplete="current-password" aria-required="true" placeholder="Please enter your password." />
+                <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String40")</label>
+                <input asp-for="Input.Password" class="entrada-texto" autocomplete="current-password" aria-required="true" placeholder="@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String41")" />
                 
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
         }
-        <button class="boton-peligro" type="submit">Delete data and close my account</button>
+        <button class="boton-peligro" style="margin-top: 10px;" type="submit">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String42")</button>
     </form>
 </div>
 
