--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
+    ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String33");
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
     Layout = "~/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml";
 }
@@ -9,20 +9,20 @@
 <div class="texto-info">@ViewData["Title"]</div>
 
 <div class="row perfil-espacio-adicional">
-    <p>Your account contains personal data that you have given me. This page allows you to download or delete that data.</p>
+    <p>@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String34")</p>
     <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+        <strong>@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String35")</strong>
     </p>
 
     <div class="perfil-flexible">
         <div class="perfil-flexible-izquierda">
             <form id="download-data" asp-page="DownloadPersonalData" method="post">
-                <button class="boton" type="submit">Download</button>
+                <button class="boton" type="submit">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String36")</button>
             </form>
         </div>
         <div class="perfil-flexible-derecha">
             <p>
-                <a id="delete" asp-page="DeletePersonalData" class="boton-peligro">Delete</a>
+                <a id="delete" asp-page="DeletePersonalData" class="boton-peligro">@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String37")</a>
             </p>
         </div>
     </div>
