--- a/pepeizqs deals web/Areas/Identity/Componentes/Correo.razor
+++ b/pepeizqs deals web/Areas/Identity/Componentes/Correo.razor
@@ -23,7 +23,7 @@
             <div style="margin-bottom: 25px;">
                 <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String3")</label>
                 <input value="@correoDefecto" class="entrada-texto" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String4")" disabled />
-                <button @onclick="ClickearConfirmacionCorreo" class="btn btn-link" style="outline: none; border: 0;">
+                <button @onclick="ClickearConfirmacionCorreo" class="btn btn-link" style="outline: none; border: 0; color: var(--colorTextoOscuro);">
                     @Herramientas.Idiomas.CogerCadena(idioma, "Settings.String5")
                 </button>
 
