--- a/pepeizqs deals web/Areas/Identity/Componentes/CuentaSteam.razor
+++ b/pepeizqs deals web/Areas/Identity/Componentes/CuentaSteam.razor
@@ -38,7 +38,7 @@
 		<div class="perfil-flexible-centrado">
 			@if (usuario.Avatar != null)
 			{
-				<div style="width: 10%; padding-right: 10px; padding-bottom: 10px;">
+				<div style="width: 10%; padding: 10px;">
 					<img src="@usuario.Avatar" style="max-width: 70px; max-height: 70px;" />
 				</div>
 			}
