--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
                         <li class="nav-item">
                             <div style="display: flex; flex-direction: row; align-items: center;">
                                 <i class="fa-solid fa-magnifying-glass" style="margin-right: 15px;"></i>
-                                @(await Html.RenderComponentAsync<Componentes.Secciones.Buscador>(RenderMode.ServerPrerendered, new { idioma = idioma }))
+                                @(await Html.RenderComponentAsync<Componentes.Secciones.CabeceraBuscador>(RenderMode.ServerPrerendered, new { idioma = idioma }))
                             </div>
                         </li> 
                     </ul>
