--- a/pepeizqs deals web/Pages/Shared/_LoginPartial.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_LoginPartial.cshtml
@@ -14,31 +14,7 @@
 <ul class="navbar-nav" style="margin-top: 0px;">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <div class="menu-dropdown">
-                <button class="texto-cabecera" style="margin: 0px; border: 0px; color: var(--colorTextoVisitado); line-height: 20px;">@await UsuarioCoger.Nickname(UserManager, User)</button>
-                <div class="menu-dropdown-contenido" style="right: 0;">
-                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/Index">
-                        @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Steam")
-                    </a>
-                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/Email">
-                        @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Email")
-                    </a>
-                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">
-                        @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Password")
-                    </a>
-                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/PersonalData">
-                        @Herramientas.Idiomas.CogerCadena(idioma, "Layout.PersonalData")
-                    </a>
-                    <hr>                   
-                    <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-                        <button id="logout" type="submit" class="texto-cabecera menu-dropdown-item" style="text-align: right; border: 0; width: 100%;">
-                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Logout")
-                        </button>
-                    </form>
-                </div>
-            </div>        
-        </li>
+        @(await Html.RenderComponentAsync<Componentes.Secciones.CabeceraUsuario>(RenderMode.ServerPrerendered, new { idioma = idioma }))
     }
     else
     {
