--- a/pepeizqs deals web/Pages/News.cshtml
+++ b/pepeizqs deals web/Pages/News.cshtml
@@ -11,7 +11,7 @@
 <div class="juego-wrap">
 	@if (@Model.fondo != null)
 	{
-		<img class="juego-fondo" src="@await Herramientas.Imagenes.DescargarYGuardar(Model.fondo, "noticias", Model.noticia.Id.ToString(), "fondo")" onerror="this.parentNode.removeChild(this)" />
+		<img class="juego-fondo" src="@await Herramientas.Imagenes.DescargarYGuardar(Model.fondo, "noticias", Model.noticia.Id.ToString(), "fondo", HttpContext.Request.Host.Value)" onerror="this.parentNode.removeChild(this)" />
 	}
 	
     <div class="juego-contenido">
@@ -74,7 +74,7 @@
 						<div style="min-width: 150px; max-width: 200px;">
 							<a href="game/@juego.Id" class="boton-pequeño" style="padding: 5px;">
 								<div>
-									<img src="@await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Library_600x900, "juegos", juego.Id.ToString(), "library_600x900")" style="max-width: 100%; max-height: 100%;" onerror="this.onerror=null;this.src='@juego.Imagenes.Capsule_231x87';" />
+									<img src="@await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Library_600x900, "juegos", juego.Id.ToString(), "library_600x900", HttpContext.Request.Host.Value)" style="max-width: 100%; max-height: 100%;" onerror="this.onerror=null;this.src='@juego.Imagenes.Capsule_231x87';" />
 								</div>
 							</a>
 						</div>
@@ -96,7 +96,7 @@
 						<div style="min-width: 200px; max-width: 250px;">
 							<a href="game/@juego.Id" class="boton-pequeño" style="padding: 5px;">
 								<div>
-									<img src="@await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.Id.ToString(), "capsule_231x87")" style="max-width: 100%; max-height: 100%;" />
+									<img src="@await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.Id.ToString(), "capsule_231x87", HttpContext.Request.Host.Value)" style="max-width: 100%; max-height: 100%;" />
 								</div>
 							</a>
 						</div>
