--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -158,7 +158,7 @@
 						<a class="boton-pequeño" style="padding: 1px;" href="/news/@noticia.IdMaestra">
 							<div class="perfil-flexible-centrado">
 								<div style="width: 40%;">
-									<img src="/imagenes/noticias/@noticia.IdMaestra.ToString()/header.webp" style="width: 100%; height: 100%; object-fit: contain;" />
+									<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: contain;" />
 								</div>
 
 								<div style="width: 60%; padding: 20px;">
